--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=https://aged-cardiovascular-walks-recovery.trycloudflare.com
+VITE_BACKEND_URL=https://instructional-sessions-subscription-populations.trycloudflare.com
+# VITE_BACKEND_URL=http://localhost:5000
